# photocamel

./: .env.example  .gitignore  README.md  architecture.md  dune-project  photocamel.opam
lib/: config.ml  dune  storage.ml  templates.ml
lib/templates/: base.html.jingoo  index.html.jingoo  upload.html.jingoo
