(library
 (name photocamel_lib)
 (modules)
 (libraries
  dream
  caqti
  caqti-driver-postgresql
  yojson
  aws-s3
  graphics
  tyxml
  lwt)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show lwt_ppx)))

(library
 (name templates)
 (modules templates)
 (libraries
  dream
  tyxml)
 (preprocess
  (pps lwt_ppx))) 